--- a/index.html
+++ b/index.html
@@ -33,21 +33,19 @@
       <ul>
         <li>
           <a href="https://app.rocketseat.com.br/me/muriloh13" target="_blank"
-            >Rocketseat</a
+            >Meu perfil na Rocketseat</a
           >
         </li>
 
         <li>
-          <a href="#" target="_blank">Instagram</a>
+          <a href="https://github.com/MuriloH13/ProjetoLendPage" target="_blank"
+            >Repositório do projeto</a
+          >
         </li>
 
         <li>
-          <a href="#" target="_blank">Github</a>
-        </li>
-
-        <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o explorer</a
+          <a href="https://app.rocketseat.com.br/discover" target="_blank"
+            >Link do curso para desenvolvimento deste projeto</a
           >
         </li>
       </ul>
@@ -66,7 +64,7 @@
         </a>
       </div>
       <footer>
-        Inspirado em
+        Com uma GRANDE ajuda de:
         <a href="https://rocketseat.com.br" target="_blank"> Rocketseat </a>
       </footer>
     </div>
