credits to the course of rocketseat

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <li>
           <a href="https://app.rocketseat.com.br/discover" target="_blank"
-            >Link do curso para desenvolvimento deste projeto</a
+            >Link do curso utilizado para o desenvolvimento deste projeto</a
           >
         </li>
       </ul>
